Always go through DFS/UTS when byte swapping is needed.

Before commit ef9bfb262db7004bef3704e5d914687e50d3fca4 and
e5bd99faa3b6629a55168386d5dfa936ee4e97ae, byte swapping for the front buffer
used to be done in hardware.  Now that this no longer happens we need to let
DFS/UTS ihandle the byte swapping.

See https://bugs.freedesktop.org/show_bug.cgi?id=66663 .

Signed-off-by: Mark Kettenis <kettenis@openbsd.org>